--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,7 +22,6 @@ dependencies:
   http_client: ^1.3.1
   rxdart: ^0.22.6
 
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
@@ -45,8 +44,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/map.jpg
-  #  - images/a_dot_ham.jpeg
+    - assets/turbine.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
