--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,14 +21,13 @@ dependencies:
     sdk: flutter
   http_client: ^1.3.1
   rxdart: ^0.22.6
+  image: ^2.1.9
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
 
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
 
 
 # For information on the generic Dart part of this file, see the
